# main.go
@@ -2,8 +2,10 @@ package main
 
 import (
 	"context"
+	"database/sql"
 	"fmt"
 	"github.com/joho/godotenv"
+	_ "github.com/lib/pq"
 	_ "github.com/mg52/go-api/docs"
 	"github.com/mg52/go-api/handler"
 	"github.com/mg52/go-api/helper"
@@ -14,14 +16,9 @@ import (
 	"net/http"
 	"os"
 	"os/signal"
+	"strconv"
 	"syscall"
 	"time"
-)
-
-const (
-	service         = "go-api"
-	port            = 3000
-	shutdownTimeout = 10 * time.Second
 )
 
 // @title          Swagger Example API
@@ -57,6 +54,10 @@ func run(_ []string) error {
 	}
 
 	godotenv.Load(".env")
+	dbPort, _ := strconv.Atoi(os.Getenv("DBPORT"))
+	servicePort, _ := strconv.Atoi(os.Getenv("PORT"))
+	shutdownTimeOut, _ := strconv.Atoi(os.Getenv("SHUTDOWNTIMEOUT"))
+
 	env, ok := os.LookupEnv("ENV")
 	if !ok {
 		env = "dev"
@@ -65,16 +66,72 @@ func run(_ []string) error {
 
 	mux := http.NewServeMux()
 
-	userRepository := repository.NewUserEntity()
-	userHandler := handler.NewUserHandler(logrusEntry, userRepository)
-	loginHandler := handler.NewLoginHandler(logrusEntry, userRepository)
+	psqlInfo := fmt.Sprintf("host=%s port=%d user=%s password=%s dbname=%s sslmode=disable",
+		os.Getenv("DBHOST"), dbPort, os.Getenv("DBUSER"), os.Getenv("DBPASSWORD"), os.Getenv("DBNAME"))
+	db, err := sql.Open("postgres", psqlInfo)
+	if err != nil {
+		return err
+	}
+	defer db.Close()
 
-	mux.Handle("/login", middleware.ChainingMiddleware(loginHandler, commonMiddlewares...))
+	err = helper.CreateDatabaseObjects(db)
+	if err != nil {
+		return err
+	}
+	//	sqlStatement := `
+	//CREATE TABLE IF NOT EXISTS users (
+	//  id SERIAL PRIMARY KEY,
+	//  username TEXT UNIQUE NOT NULL,
+	//  password TEXT NOT NULL
+	//);`
+	//	_, err = db.Exec(sqlStatement)
+	//	if err != nil {
+	//		return err
+	//	}
+	//
+	//	//	sqlStatement2 := `
+	//	//INSERT INTO users (username, password)
+	//	//VALUES ($1, $2)
+	//	//RETURNING id`
+	//	//	id2 := 0
+	//	//	err = db.QueryRow(sqlStatement2, "mg52", "password").Scan(&id2)
+	//	//	if err != nil {
+	//	//		panic(err)
+	//	//	}
+	//	//	fmt.Println("New record ID2 is:", id2)
+	//	//
+	//	//	sqlStatement3 := `
+	//	//INSERT INTO users (username, password)
+	//	//VALUES ($1, $2)
+	//	//RETURNING id`
+	//	//	id3 := 0
+	//	//	err = db.QueryRow(sqlStatement3, "pinar", "pass2").Scan(&id3)
+	//	//	if err != nil {
+	//	//		panic(err)
+	//	//	}
+	//	//	fmt.Println("New record ID3 is:", id3)
+	//
+	//	sqlStatementSelect := `SELECT * FROM users WHERE id=$1;`
+	//	var user domain.User
+	//	row := db.QueryRow(sqlStatementSelect, 3)
+	//	errSelect := row.Scan(&user.ID, &user.Username, &user.Password)
+	//	if errSelect != nil && errSelect == sql.ErrNoRows {
+	//		fmt.Println("No rows were returned!")
+	//	} else {
+	//		fmt.Println(user)
+	//	}
+
+	userRepository := repository.NewUserEntity(db)
+	// TODO: User handler will be removed and todo handler will be implemented and injected.
+	userHandler := handler.NewUserHandler(logrusEntry, userRepository)
+	authHandler := handler.NewAuthHandler(logrusEntry, userRepository)
+
+	mux.Handle("/auth", middleware.ChainingMiddleware(authHandler, commonMiddlewares...))
 	mux.Handle("/user", middleware.ChainingMiddleware(userHandler, commonMiddlewaresWithAuth...))
 	mux.HandleFunc("/swagger/", httpSwagger.WrapHandler)
 
 	srv := &http.Server{
-		Addr:    fmt.Sprintf(":%d", port),
+		Addr:    fmt.Sprintf(":%d", servicePort),
 		Handler: mux,
 	}
 
@@ -82,7 +139,7 @@ func run(_ []string) error {
 	signal.Notify(stop, os.Interrupt, syscall.SIGTERM, syscall.SIGINT)
 
 	go func() error {
-		logrusEntry.Infof("%s listening on 0.0.0.0:%d with %v timeout", service, port, shutdownTimeout)
+		logrusEntry.Infof("%s listening on 0.0.0.0:%d with %v timeout", os.Getenv("SERVICE"), servicePort, time.Duration(shutdownTimeOut)*time.Second)
 		if err := srv.ListenAndServe(); err != nil {
 			if err != http.ErrServerClosed {
 				logrusEntry.Fatal(err)
@@ -94,9 +151,9 @@ func run(_ []string) error {
 
 	<-stop
 
-	logrusEntry.Infof("%s shutting down ...", service)
+	logrusEntry.Infof("%s shutting down ...", os.Getenv("SERVICE"))
 
-	ctx, cancel := context.WithTimeout(context.Background(), shutdownTimeout)
+	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(shutdownTimeOut)*time.Second)
 	defer cancel()
 
 	if err := srv.Shutdown(ctx); err != nil {
@@ -104,7 +161,7 @@ func run(_ []string) error {
 		return err
 	}
 
-	logrusEntry.Infof("%s down", service)
+	logrusEntry.Infof("%s down", os.Getenv("SERVICE"))
 
 	return nil
 }
